apps/alarm-monitor/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alarm-monitor-backend
  namespace: apps
  labels:
    app: alarm-monitor-backend
spec:
#  minReadySeconds: 5
#  revisionHistoryLimit: 5
#  progressDeadlineSeconds: 60
#  strategy:
#    rollingUpdate:
#      maxUnavailable: 0
#    type: RollingUpdate
  selector:
    matchLabels:
      app: alarm-monitor-backend
  template:
    metadata:
#      annotations:
#        prometheus.io/scrape: "true"
      labels:
        app: alarm-monitor-backend
    spec:
      containers:
        - name: alarm-monitor-backend
          image: ghcr.io/ttretau/alarm_monitor/alarm-monitor-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8765
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
