apps/alarm-monitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alarm-monitor-service
spec:
  selector:
    app: alarm-monitor-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8765
